# Vyom

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  todo.md  vyom.rb
.github/workflows/: ci.yml  homebrew.yml  release.yml
Formula/: vyom.rb
benches/: dsp_bench.rs
src/: app.rs  artwork.rs  audio_device.rs  audio_pipeline.rs  config.rs  dsp_eq.rs  error.rs  inputs.rs  lib.rs  lyrics.rs  main.rs  mpd_player.rs  player.rs  theme.rs  ui.rs  visualizer.rs
src/app/: cli.rs  config.rs  events.rs  input_handler.rs  keys.rs  library_helpers.rs  lock.rs  lyrics.rs  mod.rs  runner.rs  state.rs  tmux.rs
src/app/config/: mod.rs  persistence.rs  presets.rs  user.rs
src/app/inputs/: common.rs  eq.rs  input_box.rs  library.rs  lyrics.rs  mod.rs  player.rs
src/app/state/: artwork.rs  library.rs  lyrics.rs  mod.rs  ui.rs
src/audio/: device.rs  dsp.rs  mod.rs  pipeline.rs  sources.rs  types.rs  visualizer.rs
src/audio/dsp/: eq.rs  limiter.rs  mod.rs
src/audio/sources/: common.rs  fifo.rs  http.rs  mod.rs
src/player/: controller.rs  mod.rs  mpd.rs  traits.rs
src/player/controller/: generic.rs  mod.rs  traits.rs
src/player/controller/macos/: common.rs  mod.rs  music.rs  spotify.rs
src/player/generic/: mod.rs
src/player/mpd/: mod.rs
src/ui/: layout.rs  mod.rs  theme.rs  utils.rs
src/ui/components/: eq.rs  library.rs  lyrics.rs  mod.rs  player_card.rs  popups.rs  visualizer.rs
src/ui/widgets/: mod.rs
src/ui/widgets/player/: art.rs  controls.rs  info.rs  mod.rs  progress.rs
src/ui/widgets/popups/: audio_info.rs  help.rs  input.rs  mod.rs  tag_editor.rs  toast.rs
tests/: integration_main.rs
